# t1d-optimizer

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: meal-rise-cron.yml  tandem-nightly-sync.yml  test-tandem-sync.yml  tests.yml
api/: index.py  meal_rise_cron.py  metrics_report.py  telegram.py
apps/cron_worker/: README.md  pyproject.toml  requirements.txt  vercel.json
apps/local/: README.md  __init__.py  app.py  chart_prep.py  data.py  dates.py  doctor_status.py  heatmap.py  metrics.py  navigation.py
apps/web/: .env.example  README.md  middleware.ts  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vercel.json
apps/web/lib/: agp.ts  (+13 more)
config/: user_config.yaml
core/: __init__.py  bolus_categories.py  schema.py
core/detection/: __init__.py  meal_rise.py  windowing.py
core/metrics/: __init__.py  agp.py  cgm_metrics.py  report.py  risk_indices.py  variability.py  windows.py
core/storage/: __init__.py  _postgres_converters.py  memory.py  parquet.py  protocol.py  records.py  supabase.py
db/migrations/: 0001_init.sql  0002_supabase_storage_setup.sql  0003_enable_rls.sql
detection/: __init__.py  anomaly.py  clustering.py  config.py  features.py  meal.py
detection/calibration/: __init__.py  meal_rise_scoring.py
docs/: DATA_CATALOG.md  TECHNICAL_SPEC.md  api_levels.md  tconnectsync_api_map.md
ingestion/: __init__.py  builders.py  client.py  enrich.py  fetch.py  pipeline_version.py  storage.py  tconnect.py  version_guard.py  view_data.py
scripts/: __init__.py  bootstrap_supabase.py  ci_tandem_smoke.py  daily_viz.py  doctor.py  run_detection.py  sanity_check.py  score_meal_rise.py  sync_tandem_to_supabase.py
tests/: conftest.py  test_alarms.py  test_bootstrap_supabase.py  test_builders.py  test_cli_detection.py  test_cli_doctor.py  test_client.py  test_daily_viz.py  test_detection_anomaly.py  test_detection_clustering.py  test_detection_config.py  test_detection_features.py  test_detection_meal.py  test_enrich.py  test_fetch.py  test_integration.py  test_local_dashboard.py  test_metrics_convergence.py  test_metrics_report_endpoint.py  test_pipeline_version.py  test_sanity_check.py  test_storage.py  test_suspension.py  test_sync_tandem_to_supabase.py  test_version_guard.py  test_view_data.py
(+191 files in other folders)
