[project]
name = "t1d-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=23.0.1",
    "pydexcom>=0.5.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools<75",
    "statsmodels>=0.14.6",
    "tconnectsync>=2.3.4",
    "xgboost>=3.2.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not legacy'"
markers = [
    "integration: marks tests that hit real API (deselect with '-m \"not integration\"')",
    "legacy: tests for detection/legacy/* reference implementation; not part of the default run",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
local = [
    "plotly>=6.0.0",
    "streamlit>=1.44.0",
]

[tool.vercel]
entrypoint = "api.index:handler"
